# mygpt

./: README.md  pyproject.toml  test.py
api/: router.py  schema.py
api/core/: config.py  llm.py
api/prompts/: rag.yaml
api/services/: autoregressive_service.py  generate_service.py  rag_service.py
src/: main.py  router.py
src/core/: config.py  llm.py
src/graph/: graph.py  nodes.py  state.py
src/graph/nodes/: agent.py  grading.py
src/prompts/: grade_documents.yaml  grade_hallucination.yaml  transform_query.yaml
src/router/: agent_router.py  rag_router.py
src/schemas/: agent_schema.py  rag_schema.py
src/services/: document_store.py  prompts.py  rag_service.py  utils.py
src/tools/: check_notion.py  get_current_time.py
tokenizer/: get_vocab.py
