[project]
name = "mygpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.9.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]
